--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,28 @@
   --keyNone: rgb(51 51 52);
 }
 
+@keyframes rowWiggle {
+  0% {
+    translate: 0% 0%;
+  }
+  33% {
+    translate: -10% 0%;
+  }
+  66% {
+    translate: 10% 0%;
+  }
+  100% {
+    translate: 0% 0%;
+  }
+}
+
+div[data-wiggle='1'] {
+  animation-name: rowWiggle;
+  animation-duration: 0.1s;
+  animation-timing-function: linear;
+  animation-iteration-count: 2;
+}
+
 @keyframes letterPlaced {
   0%, 100% {
     transform: scale(1);
